--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "stubborn-grass/user-faker",
     "description": "This is a virtual real user data generated from user table, and the user project is online filled with false real data",
+    "license": ["MIT"],
     "authors": [
         {
             "name": "StubbornGras",
