--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,15 @@
         }
     ],
     "require": {
-        "php" : ">=5.5"
+        "php" : ">=5.5",
+        "guzzlehttp/guzzle": "^6.4",
+        "symfony/var-dumper": "^4.3",
+        "jaeger/querylist": "^4.1"
     },
     "autoload": {
         "psr-4": {
-            "StubbornGrass\\UserFaker\\": "src/"
+            "StubbornGrass\\UserFaker\\": "src/",
+            "GuzzleHttp\\": "src/"
         }
     }
 }
